# EduMatrix

./: .gitignore  EduMatrix.py  README.md  edumatrix.db  prompt.md  pyproject.toml  setup.py
edumatrix/: controllers.py  database.py  db_filler.py  main.py  models.py
edumatrix_2/: controllers.py  database.py  db_filler.py  edumatrix.db  main.py  models.py
